{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 3,
  "lineage": "192bf832-8abd-c5e2-2832-705415884cca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rdp_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-0f99d1bfedbe4a293",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "RDP from allowed CIDR - Security Autopilot",
            "from_port": 3389,
            "id": "sgr-0f99d1bfedbe4a293",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f6252fa8a95b61d",
            "security_group_rule_id": "sgr-0f99d1bfedbe4a293",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-0ca957813430b52c3",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "SSH from allowed CIDR - Security Autopilot",
            "from_port": 22,
            "id": "sgr-0ca957813430b52c3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06f6252fa8a95b61d",
            "security_group_rule_id": "sgr-0ca957813430b52c3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    }
  ]
}